--- a/jenkins-deployment.yml
+++ b/jenkins-deployment.yml
@@ -26,11 +26,13 @@ spec:
         volumeMounts:
           - name: jenkins-vol
             mountPath: /var/jenkins_home
+          - name: docker.sock
+            mountPath: /var/run/docker.sock
       volumes:
         - name: jenkins-vol
           emptyDir: {}
-
-
+        - name: docker.sock
+          emptyDir: {}
 ---
 
 apiVersion: v1
@@ -38,10 +40,24 @@ kind: Service
 metadata:
   name: jenkins-service
 spec:
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+      nodePort: 30008
   selector:
     app: jenkins
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: jenkins-jnlp
+spec:
+  type: ClusterIP
   ports:
-    - nodePort: 30008
-      port: 80
-      targetPort: 8080
-  type: NodePort
+    - port: 50000
+      targetPort: 50000
+  selector:
+    app: jenkins
