--- a/Jenkins_Docker/Master/Dockerfile
+++ b/Jenkins_Docker/Master/Dockerfile
@@ -1,19 +1,17 @@
 FROM jenkins/jenkins:centos7-jdk11
 USER root
 
-RUN mkdir -p /tmp/download && \
- curl -L https://download.docker.com/linux/static/stable/x86_64/docker-20.10.9.tgz | tar -xz -C /tmp/download && \
- rm -rf /tmp/download/docker/dockerd && \
- mv /tmp/download/docker/docker* /usr/local/bin/ && \
- rm -rf /tmp/download && \
- groupadd -g 999 docker && \
- usermod -aG staff,docker jenkins
- 
+RUN yum -y update
+RUN yum install -y yum-utils
+#Adding Docker Repo
+ RUN yum-config-manager \
+    --add-repo \
+    https://download.docker.com/linux/centos/docker-ce.repo
+RUN  yum install -y docker-ce docker-ce-cli containerd.io
+RUN systemctl enable docker && systemctl start docker
+RUN groupadd -g docker
+RUN usermod -aG docker jenkins
 RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-
 RUN chmod +x /usr/local/bin/docker-compose
-
 RUN yum update -y && yum install -y maven 
-
-
 USER jenkins
