--- a/Jenkins_Docker/Master/Dockerfile
+++ b/Jenkins_Docker/Master/Dockerfile
@@ -4,14 +4,11 @@ USER root
 RUN yum -y update
 RUN yum install -y yum-utils
 #Adding Docker Repo
- RUN yum-config-manager \
-    --add-repo \
-    https://download.docker.com/linux/centos/docker-ce.repo
+RUN yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 RUN  yum install -y docker-ce docker-ce-cli containerd.io
-RUN systemctl enable docker && systemctl start docker
 RUN groupadd -g docker
 RUN usermod -aG docker jenkins
 RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
 RUN chmod +x /usr/local/bin/docker-compose
-RUN yum update -y && yum install -y maven 
+
 USER jenkins
