--- a/IBM-AppConnect/Jenkinsfile
+++ b/IBM-AppConnect/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                 sh 'aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 736505676141.dkr.ecr.us-east-2.amazonaws.com'
                 sh 'docker build -t 736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER} .'
                 //For local repo:
-                sh 'docker build -t 20.54.72.51:443/ace-test:${BUILD_NUMBER} .'
+                sh 'docker build -t $IP:443/ace-test:${BUILD_NUMBER} .'
             }
         }
         stage ('Push to AWS ECR'){
@@ -27,40 +27,40 @@ pipeline {
         }
         stage ('Push to Local Image Registry'){
             steps{
-                sh 'docker push 20.54.72.51:443/ace-test:${BUILD_NUMBER}'
+                sh 'docker push $IP:443/ace-test:${BUILD_NUMBER}'
             }
         }
         // stage ('Deploy to k8'){
         //     steps{
         //         sshagent(['jenkins-container-ssh']) {
                     
-        //             sh 'scp -o StrictHostKeyChecking=no ${WORKSPACE}/deployment.yaml systemsltd@20.74.201.20:/home/systemsltd/ACE-HelloWorld/'
+        //             sh 'scp -o StrictHostKeyChecking=no ${WORKSPACE}/deployment.yaml username@$IP:/home/username/ACE-HelloWorld/'
         //             //For AWS ECR:
-        //             sh 'ssh systemsltd@20.74.201.20 sed -i "s,IMAGE_NAME,736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}," /home/systemsltd/ACE-HelloWorld/deployment.yaml'
+        //             sh 'ssh username@$IP sed -i "s,IMAGE_NAME,736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}," /home/username/ACE-HelloWorld/deployment.yaml'
         //             //For local repo:
-        //             //sh 'ssh systemsltd@20.74.201.20 sed -i "s,IMAGE_NAME,20.54.72.51:443/ace-test:${BUILD_NUMBER}," /home/systemsltd/ACE-HelloWorld/deployment.yaml'
-        //             sh 'ssh systemsltd@20.74.201.20 kubectl apply -f /home/systemsltd/ACE-HelloWorld/deployment.yaml'
+        //             //sh 'ssh username@$IP sed -i "s,IMAGE_NAME,$IP:443/ace-test:${BUILD_NUMBER}," /home/username/ACE-HelloWorld/deployment.yaml'
+        //             sh 'ssh username@$IP kubectl apply -f /home/username/ACE-HelloWorld/deployment.yaml'
         //         }
         //     }
         // }
            stage ('Pull Helm chart from AWS ECR'){
                steps{
                    sshagent(['jenkins-container-ssh']) {
-                       sh 'scp -o StrictHostKeyChecking=no ${WORKSPACE}/helm.sh systemsltd@20.74.201.20:/home/systemsltd/Helm/ECR/'
-                       sh 'ssh systemsltd@20.74.201.20 chmod 700 /home/systemsltd/Helm/ECR/helm.sh'
-                       sh 'ssh systemsltd@20.74.201.20 /home/systemsltd/Helm/ECR/helm.sh'
+                       sh 'scp -o StrictHostKeyChecking=no ${WORKSPACE}/helm.sh username@$IP:/home/username/Helm/ECR/'
+                       sh 'ssh username@$IP chmod 700 /home/username/Helm/ECR/helm.sh'
+                       sh 'ssh username@$IP /home/username/Helm/ECR/helm.sh'
                    }
                }
            }
         stage ('Deploy via Helm'){
             steps{
                 sshagent(['jenkins-container-ssh']) {
-                    sh 'ssh systemsltd@20.74.201.20 helm upgrade ace-chart /home/systemsltd/Helm/ECR/ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
+                    sh 'ssh username@$IP helm upgrade ace-chart /home/username/Helm/ECR/ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
                     // script{
                     //     try{
-                    //         sh 'ssh systemsltd@20.74.201.20 cd /home/systemsltd/Helm && helm install ace-chart-1 ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
+                    //         sh 'ssh username@$IP cd /home/username/Helm && helm install ace-chart-1 ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
                     //     }catch (Exception e){
-                    //         sh 'ssh systemsltd@20.74.201.20 cd /home/systemsltd/Helm && helm install ace-chart-1 ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
+                    //         sh 'ssh username@$IP cd /home/username/Helm && helm install ace-chart-1 ace-deployment/ --set replicaCount=3 --set image.name=736505676141.dkr.ecr.us-east-2.amazonaws.com/ace-test:${BUILD_NUMBER}'
                     //     }
                     // }
                 }
