--- a/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
+++ b/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
@@ -5,12 +5,13 @@ metadata:
   labels:
     k8s-app: jenkins
   name: jenkins
-  namespace: default
+  namespace: jenkins
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: jenkins-crb
+  namespace: jenkins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -18,12 +19,13 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: jenkins
-    namespace: default
+    namespace: jenkins
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jenkins-pv-claim
+  namespace: jenkins
   labels:
     app: jenkins
 spec:
@@ -37,6 +39,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins-deployment
+  namespace: jenkins
   labels:
     app: jenkins
 spec:
@@ -104,6 +107,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-service
+  namespace: jenkins
 spec:
   type: NodePort
   ports:
@@ -119,6 +123,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-jnlp
+  namespace: jenkins
 spec:
   type: ClusterIP
   ports:
