--- a/Jenkins_K8/Jenkins_K8_Yaml/pv.yaml
+++ b/Jenkins_K8/Jenkins_K8_Yaml/pv.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: jenkins-pv-volume
+  namespace: jenkins
   labels:
     app: jenkins
 spec:
@@ -10,4 +11,4 @@ spec:
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/home/arslaanmalik/jenkins-new/"
+    path: "/home/arslaanmalik/jenkins-workspace/"
