--- a/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
+++ b/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
@@ -11,7 +11,6 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: jenkins-crb
-  namespace: jenkins
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -39,7 +38,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins-deployment
-  namespace: jenkins
   labels:
     app: jenkins
 spec:
@@ -59,7 +57,11 @@ spec:
           claimName: jenkins-pv-claim
       containers:
       - name: jenkins
-        image: arslaanmalik/jenkins-master:centos
+        image: mfarhan1998/jenkins-master:centos
+        resources:
+          limits:
+            memory: "2048Mi"
+            cpu: "500m"
         env:
         - name: JAVA_OPTS
           value: -Djenkins.install.runSetupWizard=false
@@ -107,7 +109,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-service
-  namespace: jenkins
 spec:
   type: NodePort
   ports:
@@ -123,7 +124,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jenkins-jnlp
-  namespace: jenkins
 spec:
   type: ClusterIP
   ports:
