--- a/Jenkins_K8/Jenkins_DockerFiles/Slave/Dockerfile
+++ b/Jenkins_K8/Jenkins_DockerFiles/Slave/Dockerfile
@@ -8,15 +8,15 @@ RUN apt install -y apt-transport-https  ca-certificates  curl software-propertie
 #Installing Podman
 
 #Installing Docker and Docker Compose
-RUN mkdir -p /tmp/download && \
- curl -L https://download.docker.com/linux/static/stable/x86_64/docker-20.10.9.tgz | tar -xz -C /tmp/download && \
- rm -rf /tmp/download/docker/dockerd && \
- mv /tmp/download/docker/docker* /usr/local/bin/ && \
- rm -rf /tmp/download && \
- groupadd -g 999 docker && \
- usermod -aG docker jenkins
-RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-RUN chmod +x /usr/local/bin/docker-compose
+# RUN mkdir -p /tmp/download && \
+#  curl -L https://download.docker.com/linux/static/stable/x86_64/docker-20.10.9.tgz | tar -xz -C /tmp/download && \
+#  rm -rf /tmp/download/docker/dockerd && \
+#  mv /tmp/download/docker/docker* /usr/local/bin/ && \
+#  rm -rf /tmp/download && \
+#  groupadd -g 999 docker && \
+#  usermod -aG docker jenkins
+# RUN curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+# RUN chmod +x /usr/local/bin/docker-compose
 
 #Installing Kubernetes CLI
 RUN cd /usr/bin && curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.23.2/bin/linux/amd64/kubectl
