registry image added and secret

--- a/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
+++ b/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
@@ -55,9 +55,11 @@ spec:
       - name: jenkins-pv-storage
         persistentVolumeClaim:
           claimName: jenkins-pv-claim
+      imagePullSecrets:
+      - name: reg-cred-secret
       containers:
       - name: jenkins
-        image: mfarhan1998/jenkins-master:centos
+        image: docker-registry:5000/jenkins:master 
         resources:
           limits:
             memory: "2048Mi"
