--- a/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
+++ b/Jenkins_K8/Jenkins_K8_Yaml/jenkins-deployment.yml
@@ -69,7 +69,7 @@ spec:
           value: -Djenkins.install.runSetupWizard=false
 #        - name: JENKINS_OPTS
 #          value: --prefix=/jenkins
-        imagePullPolicy: Always
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
         - containerPort: 50000
